# xmlsec-win32-bin

./: CMakeLists.txt
examples/: sign2.c
lib/: libexslt.lib  libxml2.lib  libxslt.lib  xmlsec.lib
